# packing-items

./: .isort.cfg  .pre-commit-config.yaml  README.md  benchmark.py  pyproject.toml
packing/: algorithm.py  algorithm_v12.py  algorithm_v3.py  basket.py  combinations_v1.py  filter_baskets.py  lazy.py  test_algorithm.py  test_combinations.py  wallet.py  with_itertools.py
packing/tests/: conftest.py  test_algorithm.py  test_algorithms.py  test_combinations.py
packing_knapsack/: knsapsack.py
