[tool.poetry]
name = "packing-knapsack"
version = "0.1.0"
description = ""
authors = ["Mira <szewczyk.mira@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipython = "^7.13.0"
pytest = "^5.4.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.2.0"
black = "^19.10b0"
isort = "^4.3.21"
mypy = "^0.770"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
